--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -65,10 +65,10 @@
                     <!--ADMIN NAVBAR-->
                     <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
                       <ul class="nav navbar-nav navbar-right">
-                        <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
-                        <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
-                        <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
-                        <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
+                        <li><a th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
+                        <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
+                        <li><a th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
+                        <li><a th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
                       </ul>
                     </div>
 
@@ -112,7 +112,7 @@
                       <span class="ah-words-wrapper">
                         <b class="is-visible">Knowledge</b>
                         <!--edit here-->
-                        <b>Customer</b>
+                        <b>Customers</b>
                         <!--edit here-->
                         <b>Relations</b>
                         <!--edit here-->
