--- a/src/main/resources/templates/product-list-by-username.html
+++ b/src/main/resources/templates/product-list-by-username.html
@@ -12,6 +12,7 @@
             href="https://fonts.googleapis.com/css?family=Poppins:400,400i,600,700,800"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css%22%3E">
 
     <!--Bootstrap css-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
@@ -192,6 +193,7 @@
                                             <li>
                                                 <a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Product
                                                     Recommendation</a></li>
+                                            <li><a><i class="fa-solid fa-user fa-3x"></i></a></li>
                                         </ul>
                                     </div>
                                 </nav>
