--- a/src/main/resources/templates/product-recommendation.html
+++ b/src/main/resources/templates/product-recommendation.html
@@ -196,7 +196,7 @@
   <div class="form-box">
     <form>
       <div class="title">
-        <h2 id="h2-title">Product Category List</h2>
+        <h2 id="h2-title">Product Recommendation List</h2>
       </div>
       <table class="content-table table table-bordered table-striped " id="productinquiry-table">
         <thead>
