--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -163,14 +163,16 @@
                             <div class="navbar-collapse collapse">
                                 <nav>
                                     <!--ADMIN NAVBAR-->
-                                        <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                                            <ul class="nav navbar-nav navbar-right">
-                                                <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
-                                                <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
-                                                <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
-                                                <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
-                                            </ul>
-                                        </div>
+                                    <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                                        <ul class="nav navbar-nav navbar-right">
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
+                                            <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
+                                            <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
+                                        </ul>
+                                    </div>
 
                                     <!--ADMIN NAVBAR-->
                                     <div sec:authorize="hasAnyAuthority('ROLE_USER')">
@@ -193,6 +195,8 @@
                                             <li>
                                                 <a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Product
                                                     Recommendation</a></li>
+                                            <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
+                                            <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
                                         </ul>
                                     </div>
                                 </nav>
