--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -15,6 +15,7 @@
     />
     <meta name="author" content="Mouri Theme" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://kit.fontawesome.com/8345e13c5c.js"></script>
 
     <!--template title-->
     <title>Main Page</title>
@@ -65,36 +66,26 @@
                     <!--ADMIN NAVBAR-->
                     <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
                       <ul class="nav navbar-nav navbar-right">
-                        <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
-                        <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
-                        <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
-                        <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
+                        <li><a th:href="@{/api/v1/dashboard}">Dashboard</a></li>
+                        <li><a th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
+                        <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
+                        <li><a th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
+                        <li><a th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
                         <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
                         <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
                       </ul>
                     </div>
 
-                    <!--ADMIN NAVBAR-->
+                    <!--USER NAVBAR-->
                     <div sec:authorize="hasAnyAuthority('ROLE_USER')">
                       <ul class="nav navbar-nav navbar-right">
-                        <li>
-                          <a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product
-                            List</a></li>
-                        <li>
-                          <a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product
-                            Inquiry</a></li>
-                        <li>
-                          <a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise
-                            Complaint</a></li>
-                        <li>
-                          <a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint
-                            List</a></li>
-                        <li>
-                          <a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry
-                            List</a></li>
-                        <li>
-                          <a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Product
-                            Recommendation</a></li>
+                        <li><a th:href="@{/api/v1/dashboard/dashboardForUser(username=${#authentication.getName()})}">Dashboard</a></li>
+                        <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product List</a></li>
+                        <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Inquiry</a></li>
+                        <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
+                        <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
+                        <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry List</a></li>
+                        <li><a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Recommendation</a></li>
                         <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
                         <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
                       </ul>
@@ -210,7 +201,7 @@
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <div class="single-blog-news text-center">
               <div class="news-img">
-                <img th:src="@{/images/blog/blog1.jpg}" alt="blog image" />
+                <img th:src="@{/images/productRecommendation.jpg}" alt="blog image" id="image-f" />
                 <!--edit image-->
               </div>
 
@@ -218,20 +209,17 @@
                 <h2>Product Recommendation</h2>
                 <p class="line4"></p>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the industry's
-                  standard dummy text ever since the 1500s, when an unknown
-                  printer
+                  Product recommendations are part of an CRM personalization strategy wherein products are
+                  dynamically populated to a user on a webpage, app, or email based on data such as customer attributes,
+                  browsing behavior, or situational context—providing a personalized shopping experience
                 </p>
-
-                <a href="single-blog.html">Continue Reading</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <div class="single-blog-news text-center">
               <div class="news-img">
-                <img th:src="@{/images/blog/blog2.jpg}" alt="blog image" />
+                <img th:src="@{/images/complaint.jpg}" alt="blog image" id="image-f"/>
                 <!--edit image-->
               </div>
 
@@ -239,31 +227,28 @@
                 <h2>Complaint Panel</h2>
                 <p class="line4"></p>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the industry's
-                  standard dummy text ever since the 1500s, when an unknown
-                  printer
+                  All in all, complaints management truly is an essential component of customer service and business
+                  success. To gather valuable customer insight, it also helps your company
+                  progress to improvements that lead to reduced costs, increased profitability and increased customer
+                  satisfaction.
                 </p>
-                <a href="single-blog.html">Continue Reading</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 hidden-sm col-xs-12">
             <div class="single-blog-news last-blog-div text-center">
               <div class="news-img">
-                <img th:src="@{/images/blog/blog3.jpg}" alt="blog image" />
+                <img th:src="@{/images/mail.jpg}" alt="blog image" id="image-f"/>
                 <!--edit image-->
               </div>
               <div class="single-post">
                 <h2>Increase relations with mail</h2>
                 <p class="line4"></p>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the industry's
-                  standard dummy text ever since the 1500s, when an unknown
-                  printer
+                  Business communication can be done easily without any security issues, and it is faster than any other
+                  forms of communication. Also, contacts can be saved easily with the help of emails, and the past
+                  messages can be checked frequently rather than saving the data in the local server.
                 </p>
-                <a href="single-blog.html">Continue Reading</a>
               </div>
             </div>
           </div>
