--- a/src/main/resources/templates/my-profile.html
+++ b/src/main/resources/templates/my-profile.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/8345e13c5c.js"></script>
     <title>Login and Refistration Form</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css"/>
 
@@ -97,9 +98,10 @@
       .submit-btn {
         width: 85%;
         padding: 10px 30px;
+        margin-top: 150px;
         cursor: pointer;
         display: block;
-        margin: 25px auto;
+        margin: 30px auto;
         background: linear-gradient(to right, #ff105f, #ffad06);
         border: 0;
         outline: none;
@@ -120,26 +122,36 @@
       }
 
       .submit-btn-2{
-        width: 178px;
+        width: 218px;
         text-align: center;
         text-decoration: none;
         font-family: sans-serif;
         font-size: 13.3px;
-        padding: 20px 30px;
+        padding: 10px 30px;
         cursor: pointer;
         display: block;
-        margin: 240px auto 5px auto;
+        /*margin: 240px auto 5px auto;*/
         background: linear-gradient(to right, #ff105f, #ffad06);
+        color: black;
         border: 0;
         outline: none;
         border-radius: 30px;
       }
 
-      .nav li a{
-        color: whitesmoke;
-        font-weight: bold;
-        font-size: 1.2em;
+      #button-change{
+        margin: 0px auto 5px auto;
       }
+
+      #button-back{
+        margin: 240px auto 5px auto;
+      }
+
+          .nav li a{
+      color: whitesmoke;
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: 13px;
+    }
       .nav li a:hover,
       .nav li a:checked,
       .nav li a:active{
@@ -184,6 +196,11 @@
         color: #ec3642;
       }
 
+      a:hover{
+        text-decoration: none;
+        color: black;
+      }
+
     </style>
   </head>
   <body>
@@ -202,6 +219,7 @@
                       <!--ADMIN NAVBAR-->
                       <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
                         <ul class="nav navbar-nav navbar-right">
+                          <li><a th:href="@{/api/v1/dashboard}">Dashboard</a></li>
                           <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
                           <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
                           <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
@@ -211,27 +229,16 @@
                         </ul>
                       </div>
 
-                      <!--ADMIN NAVBAR-->
+                      <!--USER NAVBAR-->
                       <div sec:authorize="hasAnyAuthority('ROLE_USER')">
                         <ul class="nav navbar-nav navbar-right">
-                          <li>
-                            <a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product
-                              List</a></li>
-                          <li>
-                            <a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product
-                              Inquiry</a></li>
-                          <li>
-                            <a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise
-                              Complaint</a></li>
-                          <li>
-                            <a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint
-                              List</a></li>
-                          <li>
-                            <a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry
-                              List</a></li>
-                          <li>
-                            <a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Product
-                              Recommendation</a></li>
+                          <li><a th:href="@{/api/v1/dashboard/dashboardForUser(username=${#authentication.getName()})}">Dashboard</a></li>
+                          <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product List</a></li>
+                          <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Inquiry</a></li>
+                          <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
+                          <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
+                          <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry List</a></li>
+                          <li><a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Recommendation</a></li>
                           <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
                           <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
                         </ul>
@@ -301,7 +308,8 @@
           </div>
 
 
-          <a th:action="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}"  class="submit-btn-2">Back</a>
+          <a th:href="@{/api/v1/dashboard/main}"  class="submit-btn-2" id="button-back">Back</a>
+          <a th:href="@{/changePassword(username=${#authentication.getName()})}"  class="submit-btn-2" id="button-change">Change Password</a>
         </form>
       </div>
     </div>
