--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -93,7 +93,7 @@
     }
 
     .container-2 {
-      margin-top: 750px;
+      margin-top: 900px;
       position: absolute;
       right: 0;
       width: 100vw;
@@ -539,7 +539,7 @@
       <div class="recent-payments">
         <div class="title">
           <h2>Recent Inquiry</h2>
-          <a href="#" class="btn">View All</a>
+          <a th:href="@{/api/v1/inquiry/showList}" class="btn">View All</a>
         </div>
         <table>
           <thead>
@@ -671,8 +671,8 @@
     <div class="content-2">
       <div class="recent-payments">
         <div class="title">
-          <h2>Recent Inquiry</h2>
-          <a href="#" class="btn">View All</a>
+          <h2>Recent Complaint</h2>
+          <a th:href="@{/api/v1/complaint/showList}" class="btn">View All</a>
         </div>
         <table >
           <thead>
