--- a/src/main/resources/templates/complaint-list.html
+++ b/src/main/resources/templates/complaint-list.html
@@ -171,6 +171,7 @@
                                             <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
                                             <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
                                             <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/addProductToUser}">Product Assignment</a></li>
                                             <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
                                             <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
                                             <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
