--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -250,6 +250,7 @@
           ></textarea>
           <input
             type="number"
+            min="0"
             th:field="*{price}"
             class="input-field"
             placeholder=" Price"
